--- a/AnalyticsFiles/Forecasting.ipynb
+++ b/AnalyticsFiles/Forecasting.ipynb
@@ -465,9 +465,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PTS\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -479,7 +486,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2868/2868 [00:21<00:00, 136.26it/s]\n"
+      "100%|██████████| 2868/2868 [00:21<00:00, 133.64it/s]\n"
      ]
     },
     {
@@ -487,67 +494,71 @@
      "output_type": "stream",
      "text": [
       "Train MAE: 4.866\n",
-      "Test MAE: 4.866\n"
+      "Test MAE: 4.866\n",
+      "REB\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2868/2868 [00:21<00:00, 130.63it/s]\n"
+      "100%|██████████| 2868/2868 [00:22<00:00, 128.32it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train MAE: 2.021\n",
-      "Test MAE: 2.031\n"
+      "Train MAE: 2.020\n",
+      "Test MAE: 2.031\n",
+      "AST\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2868/2868 [00:23<00:00, 121.64it/s]\n"
+      "100%|██████████| 2868/2868 [00:21<00:00, 131.04it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train MAE: 1.403\n",
-      "Test MAE: 1.401\n"
+      "Train MAE: 1.402\n",
+      "Test MAE: 1.401\n",
+      "BLK\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2868/2868 [00:23<00:00, 120.72it/s]\n"
+      "100%|██████████| 2868/2868 [00:22<00:00, 126.35it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train MAE: 0.565\n",
-      "Test MAE: 0.572\n"
+      "Train MAE: 0.563\n",
+      "Test MAE: 0.570\n",
+      "STL\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2868/2868 [00:22<00:00, 124.81it/s]\n"
+      "100%|██████████| 2868/2868 [00:22<00:00, 127.85it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train MAE: 0.747\n",
-      "Test MAE: 0.745\n"
+      "Train MAE: 0.746\n",
+      "Test MAE: 0.744\n"
      ]
     }
    ],
@@ -555,6 +566,7 @@
     "# Specify a stat of interest \n",
     "stats_of_interest = [\"PTS\", \"REB\", \"AST\", \"BLK\", \"STL\"]\n",
     "for stat_of_interest in stats_of_interest:\n",
+    "    print(stat_of_interest)\n",
     "\n",
     "    # How many games to look back for the autoregressive calculations\n",
     "    lookback = 5\n",
@@ -603,8 +615,8 @@
     "    Xtrain = scaler.fit_transform(Xtrain)\n",
     "    Xtest = scaler.transform(Xtest)\n",
     "\n",
-    "    model = Lasso(alpha = 9e-3)\n",
-    "    #model = Ridge(alpha = 9e-3)\n",
+    "    #model = Lasso(alpha = 9e-3)\n",
+    "    model = Ridge(alpha = 9e-3)\n",
     "    #model = AdaBoostRegressor(n_estimators=250, loss = 'exponential')\n",
     "    #model = KNeighborsRegressor(n_neighbors=25)\n",
     "    #model = LogisticRegression(C=1.0,max_iter = 2000, n_jobs=-1, verbose=True, warm_start=True)\n",
